fix: Make guest badge readable on all backgrounds

--- a/src/style/components/list/participant-item.less
+++ b/src/style/components/list/participant-item.less
@@ -46,7 +46,7 @@ participant-item {
   }
 
   guest-icon {
-    fill: var(--background);
+    fill: currentColor;
     opacity: 0.48;
   }
 
